Add HTTPS/WSS support with self-signed cert
Enable HTTPS/WSS for the built-in companion server and generate a self-signed keystore automatically.

- Add SslCertificateManager to generate/load ~/.churchpresenter/server.jks using keytool (forces SHA256withRSA to avoid macOS LibreSSL issues). Falls back to plain HTTP if generation fails.
- Update CompanionServer to use sslConnector with the generated keystore and to fall back to a plain-HTTP start when necessary; expose server URL as https://... when SSL is active.
- Add SSL-related constants (keystore type, alias, password, algorithm).
- Update ServerSettings UI: add "Copy Address" button and an SSL notice shown in the settings tab.
- Update resources/strings and import usages accordingly.
- Update documentation (COMPANION_API.md and AGENT_NOTES.md) to reflect HTTPS/WSS usage, provide TLS testing tips (curl/websocat with -k/--insecure), and document the server.jks behavior.

This change secures mobile/Desktop communication by default while preserving a fallback to HTTP if keystore creation fails.